# astarte-device-sdk-qt5

./: .gitlab-ci.yml  AUTHORS.md  AstarteDeviceSDKQt5.pc.in  AstarteDeviceSDKQt5Config.cmake.in  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
HemeraCore/: hemeraasyncinitobject.cpp  hemeraasyncinitobject.h  hemeraasyncinitobject_p.h  hemeracommonoperations.cpp  hemeracommonoperations.h  hemerafakehardwareidoperation.cpp  hemerafakehardwareidoperation.h  hemerafingerprints.cpp  hemerafingerprints.h  hemeraglobal.h  hemeraliterals.h  hemeraoperation.cpp  hemeraoperation.h  hemeraoperation_p.h
HemeraCore/HemeraCore/: AsyncInitObject  CommonOperations  Fingerprints  Global  Literals  Operation
astarte-device-sdk/: AstarteDeviceSDK.cpp  AstarteDeviceSDK.h  Utils.cpp  Utils.h  interface.json
astarte-device-sdk/templates/: com.example.interface.json  transport-astarte.conf
astarte-transport/: astartetransport.cpp  astartetransport.h  astartetransportcache.cpp  astartetransportcache.h
astarte-transport/db/migrations/: 001_create_cachemessages.sql  002_create_persistent_entries.sql
astarte-utils/: AstarteGenericConsumer.cpp  AstarteGenericConsumer.h  AstarteGenericProducer.cpp  AstarteGenericProducer.h  QJsonSchemaChecker.cpp  QJsonSchemaChecker.h  ValidateInterfaceOperation.cpp  ValidateInterfaceOperation.h
astarte-utils/astarte-validate-interface/: CMakeLists.txt  astarte-validate-interface.cpp
cmake/modules/: BasicFindPackageVersion.cmake.in
hyperdrive/: cachemessage.cpp  cachemessage.h  hyperdriveconfig.h  hyperdriveinterface.cpp  hyperdriveinterface.h  hyperdriveprotocol.h  hyperdriveutils.cpp  hyperdriveutils.h
hyperspace/: AbstractWaveTarget.cpp  AbstractWaveTarget.h  AbstractWaveTarget_p.h  BSONDocument.cpp  BSONDocument.h  BSONSerializer.cpp  BSONSerializer.h  ConsumerAbstractAdaptor.cpp  ConsumerAbstractAdaptor.h  Fluctuation.cpp  Fluctuation.h  Global.h  ProducerAbstractInterface.cpp  ProducerAbstractInterface.h  Rebound.cpp  Rebound.h  Wave.cpp  Wave.h
hyperspace/HyperspaceCore/: AbstractWaveTarget  BSONDocument  BSONSerializer  Fluctuation  Global  Rebound  Wave
hyperspace/HyperspaceProducerConsumer/: ConsumerAbstractAdaptor  ProducerAbstractInterface
transports/: astartecrypto.cpp  astartecrypto.h  astartecrypto_p.h  astarteendpoint.cpp  astarteendpoint.h  astarteendpoint_p.h  astartehttpendpoint.cpp  astartehttpendpoint.h  astartehttpendpoint_p.h  astartepairoperation.cpp  astartepairoperation.h  astarteverifycertificateoperation.cpp  astarteverifycertificateoperation.h  credentialssecretprovider.cpp  credentialssecretprovider.h  defaultcredentialssecretprovider.cpp  defaultcredentialssecretprovider.h  hyperdrivemqttclientwrapper.cpp  hyperdrivemqttclientwrapper.h  hyperdrivemqttclientwrapper_p.h  transportdatabasemanager.cpp  transportdatabasemanager.h
